--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,4 +1,3 @@
-(href="#") for creating a new url.
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +7,7 @@
 </head>
 
 <body>
+  <%- include('partials/_header') %>
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
