--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,6 +15,12 @@
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
     <div class="card-footer text-muted"></div>
+    <h3>Edit</h3>
+      <form action="/urls/<%= shortURL %>" method="POST">
+      <label for="newURL">New URL:</label>
+      <input type="text" name="newURL" placeholder="http://" style="width: 300px; margin: 1em">
+      <button type="submit" class="btn btn-primary">Update</button>
+      </form>
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
