--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,10 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form method="POST" action="/login" class="form-inline">
+        <input type="text" name="user_Id" placeholder="Username">
+        <button type="submit" class="btn btn-outline-dark" style="margin: 1em">Login</button>
+      </div>
+    </form>
   </nav>
 </header>
