--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -15,13 +15,21 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Register</h3>
+      <h3>Create Account</h3>
+      <br>
       <form action="/register" method="POST">
-        <label for="email">Email</label>
-        <input type="email" name="email" style="width: 300px; margin: 1em">
-        <label for="password">Password</label>
-        <input type="password" name="password" style="width: 300px; margin: 1em">
-        <button type="submit" class="btn btn-primary">Register</button>
+      
+        <label for="email"><b>Email</b></label>
+        <br>
+        <input type="email" name="email"placeholder="Enter email">
+        <br> 
+        <br>
+      <label for="password"><b>Password</b></label>
+       <br>
+      <input type="password" name="password"placeholder="Password">
+      <br>
+      <br>      
+      <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </main>
       <!-- Bootstrap JS -->
