--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,8 +10,8 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if(username){ %>
-      <div>Logged in as: <%= username %></div>
+    <% if(user){ %>
+      <div>Logged in as: <%= user.email %></div>
     </form>
     <form method="POST" action="/logout" class="form-inline">
       <button type="submit" class="btn btn-outline-dark" style="margin: 1em">Logout</button>
