--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -15,7 +15,7 @@
     <main style="margin: 1em;">
       <h3>Login</h3>
       <br>
-      <form action="/login" method="POST">
+      <form method="POST" action="/login">
       
         <label for="email"><b>Email</b></label>
         <br>
